k8s/voyager/verne-ingress-local.yaml
apiVersion: voyager.appscode.com/v1
kind: Ingress
metadata:
  name: verne-ingress-local
  namespace: vernemq
  annotations:
    ingress.appscode.com/keep-source-ip: "true"

spec:
  rules:
  - host:
    tcp:
      port: 1883
      backend:
        service:
          name: my-vernemq
          port:
            number: 1883
        loadBalanceOn: source
